Create landing page

--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,9 @@ github_username:  jekyll
 # Build settings
 markdown: kramdown
 
+sass:
+  style: compressed
+
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
