Add social sharing meta tags

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,8 @@
 title: The Open Source Survey
 email: hello@opensourcesurvey.io
 
-description: 3 minute survey to identify priorities and challenges of the open-source community.
+description: Take a 3-minute survey to identify priorities and challenges of the open-source community.
+twitter_handle: "@osssurvey"
 
 baseurl: ""
 url: ""
